--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -19,5 +19,5 @@ jobs:
         uses: jeffreytse/jekyll-deploy-action@v0.3.1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          repository: 'portfolio-build'
+          repository: 'veyselkaraca/portfolio-build'
           branch: 'main'
