--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -18,6 +18,6 @@ jobs:
       - name: 🧪  Build and deploy
         uses: jeffreytse/jekyll-deploy-action@v0.3.1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT }}
           repository: 'veyselkaraca/portfolio-build'
           branch: 'main'
