--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -18,6 +18,6 @@ jobs:
       - name: 🧪  Build and deploy
         uses: jeffreytse/jekyll-deploy-action@v0.5.0
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
           repository: 'veyselkaraca/portfolio-build'
           branch: 'main'
