--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Veysel Karaca Portfolio
-description: Veysel Karaca
+description: Veysel Karaca Portfolio Site made by Jekyll. I'm a Software Engineer from Turkey, DevOps and Web Development are two things that attract me as a computer programmer.
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
