Remove Anchor Text

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Veysel Karaca Portfolio
+title: Veysel Karaca DevOps Specialist
 description: I'm a Software Engineer from Turkey, DevOps and Web Development are two things that attract me as a computer programmer.
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
